# gameengine

./: .gitignore  AssetManager.cpp  AssetManager.h  BblHub.cpp  BblHub.h  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Components.h  DisplayWidget.cpp  DragB.h  DraggableButton.h  Engine.cpp  Engine.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityManager.cpp  EntityManager.h  EntityModel.cpp  EntityModel.h  FilesWindow.cpp  FilesWindow.h  GameWorld.cpp  GameWorld.h  Gameobject.cpp  Gameobject.h  Input.h  LICENCE.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  Mesh.cpp  Mesh.h  PhysicsSystem.cpp  (+45 more)
AssetManager/: AssetManager.cpp  AssetManager.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  WavfileReader.cpp  WavfileReader.h
Assets/Models/: ball.mtl  viking_room.mtl
Assets/Scripts/: entry.lua
Assets/Sounds/: README.txt
Assets/Textures/: README.txt
Core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  ShadowRenderer.cpp  ShadowRenderer.h  Utilities.h  Vertex.cpp  Vertex.h  VulkanHelper.cpp  VulkanHelper.h
ECS/: Components.h  Entity.cpp  Entity.h  RenderSystem.cpp  RenderSystem.h  ScriptingSystem.cpp  ScriptingSystem.h  SoundSystem.cpp  SoundSystem.h  Systems.cpp  Systems.h
Editor/: DraggableButton.cpp  DraggableButton.h  EntityContainer.cpp  EntityContainer.h  EntityModel.cpp  EntityModel.h  FilesWindow.cpp  FilesWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutlinerDock.cpp  OutlinerDock.h
Shaders/: CompileShaders.bat  Phong.frag  Phong.frag.spv  Phong.vert  Phong.vert.spv  Shader.vert  ShadowMap.vert  ShadowMap.vert.spv  color.frag  color.frag.spv  color.vert  color.vert.spv  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  instanced.frag  instanced.frag.spv  instanced.vert  instanced.vert.spv  phong.frag  phong.frag.spv  phong.vert  phong.vert.spv  shader.frag.spv  shader.vert.spv  skinning.vert  vert.spv
docs/: Doxyfile
fontgenerator/: .gitignore  create_spritesheet.magick
games/ballgame/: CMakeLists.txt
games/demos/: CMakeLists.txt
games/demos/source/: breakout.cpp  breakout.h  empty.cpp  empty.h  flappybird.cpp  flappybird.h  main.cpp  pong.cpp  pong.h  rollingball.cpp  rollingball.h  vikingscene.cpp  vikingscene.h
games/rpg/: CMakeLists.txt
games/rpg/source/: main.cpp
games/towerdefense/: CMakeLists.txt
games/towerdefense/source/: game.cpp  game.h  gameover.cpp  gameover.h  main.cpp  mainmenu.cpp  mainmenu.h  physicstest.cpp  physicstest.h  splash.cpp  splash.h  victory.cpp  victory.h
report/: report.md
source/: Renderer.h  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  utilities.h
source/components/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  camera.cpp  camera.h  component.h  cube.cpp  cube.h  fpscamera.cpp  fpscamera.h  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  spherecollider.cpp  spherecollider.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  text.cpp  text.h  trianglecollider.cpp  trianglecollider.h  visualobject.h
source/core/components/: AssetManager.cpp  AssetManager.h  ballemitter.cpp  ballemitter.h  boxcollider.cpp  boxcollider.h  bsplinesurface.cpp  bsplinesurface.h  camera.cpp  camera.h  component.h  cube.cpp  cube.h  fpscamera.cpp  fpscamera.h  fpscounter.cpp  fpscounter.h  fpvcamera.cpp  fpvcamera.h  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  rigidbody.cpp  rigidbody.h  snowglobecamera.cpp  snowglobecamera.h  sphere.cpp  sphere.h  spherecollider.cpp  spherecollider.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  terrainsnap.cpp  terrainsnap.h  text.cpp  text.h  timer.cpp  (+11 more)
source/core/x-platform/: Services.cpp  Services.h  bsplinecurve.cpp  bsplinecurve.h  debug.cpp  editor.h  generatedscene.cpp  generatedscene.h  input.cpp  input.h  locator.h  scene.h  services.cpp  services.h  timer.cpp
source/demos/: breakout.cpp  breakout.h  empty.cpp  empty.h  flappybird.cpp  flappybird.h  physicstestscene.cpp  physicstestscene.h  pong.cpp  pong.h  rollingball.cpp  rollingball.h  vikingscene.cpp  vikingscene.h
source/modules/: system.h
source/modules/ai/null/: nullai.h
source/modules/audio/: audio.h
source/modules/audio/null/: nullaudio.cpp  nullaudio.h
source/modules/audio/openal/: openalaudio.cpp  openalaudio.h  soundsource.cpp  soundsource.h
source/modules/audio/qtaudio/: qtaudio.cpp  qtaudio.h  qtmultimediaaudio.cpp  qtmultimediaaudio.h
source/modules/filesystem/: filesystem.h
source/modules/filesystem/null/: nullfilesystem.cpp  nullfilesystem.h
source/modules/physics/: physics.h
source/modules/physics/aaphysics/: aaphysics.cpp  aaphysics.h
source/modules/physics/null/: nullphysics.cpp  nullphysics.h
source/modules/renderer/: renderer.h  vertex.h
source/modules/renderer/null/: nullrenderer.cpp  nullrenderer.h
source/modules/renderer/vulkan/: renderer.cpp  renderer.h  utilities.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkantexture.h
source/modules/script/: script.h
source/modules/script/null/: nullscript.cpp  nullscript.h
source/systems/: system.h
source/systems/ai/: ai.h
source/systems/ai/null/: CMakeLists.txt  nullai.h
source/systems/audio/: audio.h
source/systems/audio/null/: CMakeLists.txt  nullaudio.cpp  nullaudio.h
source/systems/audio/openal/: CMakeLists.txt  openalaudio.cpp  openalaudio.h  soundsource.h  wavfilereader.h
source/systems/audio/qtaudio/: CMakeLists.txt  qtmultimediaaudio.cpp  qtmultimediaaudio.h
source/systems/physics/: physics.h
source/systems/renderer/: renderer.h  vertex.h
source/systems/renderer/null/: CMakeLists.txt  nullrenderer.cpp  nullrenderer.h
source/systems/renderer/vulkan/: CMakeLists.txt  utilities.h  vulkanrenderer.cpp  vulkanrenderer.h
source/systems/script/: script.h
source/towerdefense/: game.h
source/x-platform/: debug.cpp  debug.h  editor.h  input.cpp  input.h  locator.cpp  locator.h  scene.h
tools/pointconverter/: .gitignore  Makefile  pointconverter
tools/pointconverter/source/: main.cpp
(+12 files in other folders)
